--- a/src/app/Pages/contact/contact.component.html
+++ b/src/app/Pages/contact/contact.component.html
@@ -44,7 +44,10 @@
  <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="index.html" class="mil-logo">RABM</a>
+                <!-- <a href="index.html" class="mil-logo">RABM</a> -->
+                               <div class="mi-invert-fix">
+                    <img src="../../../assets/img/logo.jpeg" alt="logo" width="100">
+</div>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -57,33 +60,26 @@
 
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
-                                    <li>
+                                    <li class="">
                                         <a href="index.html">Home</a>
                                     </li>
-                                    <li class="mil-has-children">
-                                        <a href="#.">Services</a>
-                                        <ul style="list-style-type: disc;">
-                                            <li class="">
-                                                <a href="services/seo/index.html">Buying & selling of own real estate</a>
-                                            </li>
-                                            <li class="">
-                                                <a href="services/marketing/index.html">Property agement on a fee or contract basis</a>
-                                            </li>
-                                            <li class="">
-                                                <a
-                                                    href="services/web-development/index.html">Media representation for brands & property</a>
-                                            </li>
-                                            <li class="">
-                                                <a href="services/ai/index.html">Residents property managementman</a>
-                                            </li>
-                                            <!-- <li class="">
-                                                <a href="services/index.html">All services</a>
-                                            </li> -->
-                                        </ul>
-                                    </li>
-                                    <li class="">
-                                        <a href="portfolio/index.html">Portfolio</a>
-                                    </li>
+                                     <li class="mil-has-children">
+    <a [routerLink]="[]" (click)="toggleDropdown($event)">Services</a>
+    <ul style="list-style-type: disc;">
+          <li>
+            <a routerLink="/service-one/index.html">Buying & selling of own real estate</a>
+        </li>
+        <li class="">
+            <a routerLink="/service-two/index.html">Property management on a fee or contract basis</a>
+        </li>
+        <li class="">
+            <a routerLink="/service-three/index.html">Media representation for brands & property</a>
+        </li>
+        <li class="">
+            <a routerLink="/service-four/index.html">Residents property management</a>
+        </li>
+    </ul>
+</li>
                                     <li class="mil-active">
                                         <a href="contact/index.html">Contact</a>
                                     </li>
@@ -106,7 +102,11 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="../it/index.html" class="mil-logo">RABM</a>
+                <a href="/" class="mil-logo">RABM</a>
+                               <!-- <div class="mi-invert-fix">
+                    <img src="../../../assets/img/logo.jpeg" alt="logo" width="100">
+</div> -->
+
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -154,7 +154,7 @@
                 <section id="contact">
                     <div class="container mil-p-120-90">
                         <h3 class="mil-center mil-up mil-mb-120">Let's <span class="mil-thin">Talk</span></h3>
-                        <form id="contact-form" class="row align-items-center" method="POST" action="#" novalidate>
+                        <form id="contact-form" class="row align-items-center"   action="mailto:israjaved@rabmfacilitymanagement.co.uk" method="POST" enctype="text/plain" novalidate>
                             <div class="col-lg-6 mil-up">
                                 <input type="text" name="name" placeholder="What's your name">
                             </div>
@@ -189,15 +189,18 @@
 
                 <!-- footer -->
                 
- <footer class="mil-dark-bg">
+<footer class="mil-dark-bg">
                     <div class="mi-invert-fix">
                         <div class="container mil-p-120-60">
                             <div class="row justify-content-between">
                                 <div class="col-md-4 col-lg-4 mil-mb-60">
 
-                                    <div class="mil-muted mil-logo mil-up mil-mb-30">RABM</div>
+                                                                        <div class="mil-muted mil-logo mil-up mil-mb-30">
+                                        <img src="../../../assets/img/logo.jpeg" width="150" alt="">
+                                    </div>
+                                    <!-- <div class="mil-muted mil-logo mil-up mil-mb-30">RABM UK FACILITY MANAGEMENT CO. LTD</div> -->
 
-                                    <p class="mil-light-soft mil-up mil-mb-30">Subscribe to our newsletter:</p>
+                                    <!-- <p class="mil-light-soft mil-up mil-mb-30">Subscribe to our newsletter:</p> -->
 
                                         <form class="mil-subscribe-form mil-up">
                                             <input type="email" placeholder="Enter your email">
@@ -282,7 +285,7 @@
                                                             class="far fa-circle"></i></a></li>
                                             </ul>
                                         </div> -->
-                                        <p class="mil-light-soft mil-up">© Copyright 2025 - RABM All Rights Reserved. <a
+                                        <p class="mil-light-soft mil-up">© Copyright 2026 - RABM All Rights Reserved. <a
                                                 href="http://www.iubenda.com/privacy-policy/32296775/legal"
                                                 rel="noopener" target="_blank" data-no-swup>Privacy policy</a>.</p>
                                         <!-- <p class="mil-light-soft mil-up"><a href="it/index.html" class="mil-light-soft"
